# training

TRAINING_SOURCES/: CMakeLists.txt  build.sh
TRAINING_SOURCES/include/: foo.h  lodepng_image.h  pngpp_image.h
TRAINING_SOURCES/src/: CMakeLists.txt
TRAINING_SOURCES/src/cmake_images/: main.cpp
TRAINING_SOURCES/src/lib/: foo.cpp  lodepng_image.cpp  pngpp_image.cpp
TRAINING_SOURCES/src/png++-0.2.0/example/: pixel_generator.dep
TRAINING_SOURCES/src/png++-0.2.0/test/: convert_color_space.dep  generate_gray_packed.dep  generate_palette.dep  read_write_gray_packed.dep
TRAINING_SOURCES/src/png++-0.2.9/example/: pixel_generator  pixel_generator.dep
TRAINING_SOURCES/src/png++-0.2.9/test/: convert_color_space  convert_color_space.dep  dump  dump.dep  generate_gray_packed  generate_gray_packed.dep  generate_palette  generate_palette.dep  read_write_gray_packed  read_write_gray_packed.dep  read_write_param  read_write_param.dep  write_gray_16  write_gray_16.dep
TRAINING_SOURCES/src/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ggtest.cpp
TRAINING_SOURCES/src/ut_test/: CMakeCache.txt  Makefile  cmake_install.cmake
